k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: auth
  name: auth
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 80
      protocol: TCP
    - name: "grpc"
      port: 4000
      targetPort: 4000
      protocol: TCP
  selector:
    app: auth
